Fix overflow ellipsis in breadcrumb.

--- a/web/pwa/src/app/component/breadcrumb/breadcrumb.component.scss
+++ b/web/pwa/src/app/component/breadcrumb/breadcrumb.component.scss
@@ -4,6 +4,8 @@
     display: inline-flex;
     flex-direction: row;
     align-items: center;
+    overflow: hidden;
+    max-width: 100%;
 
     .ios & {
         justify-content: center;
